# Cnc-Assistant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cnc_assistant/: __init__.py  cli.py  dxf_processor.py  gcode.py  geometry.py  interactive.py  nesting.py  nesting_nfp.py  preview.py  project.py  rapor.py  webapp.py
cnc_assistant/web/: app.css  app.js  index.html
examples/: ornek_uret.py
tests/: test_features.py  test_gcode.py  test_geometry.py
